syntax = "proto3";

service DecentralizedRedis {
  rpc Query(CommandRequest) returns (QueryResponse) {}
}
message CommandRequest{
    string cmd = 1;
}
message QueryResponse{
	uint32 Code = 1;
	string CodeMsg = 2;
	string Result = 3;
}

